<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.LogInActivity">


    <TextView
        android:id="@+id/create_account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:fontFamily="monospace"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:textStyle="bold"
        android:textColor="@color/light_blue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="60dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/log_in_email"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:hint="@string/email"
        android:textSize="22sp"
        android:gravity="bottom"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_account_text"
        android:layout_marginTop="60dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/log_in_password"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:hint="@string/password"
        android:textSize="22sp"
        android:gravity="bottom"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_in_email"
        android:layout_marginTop="40dp"/>


    <Button
        android:id="@+id/log_in_btn"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/log_in"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/log_in_password"
        android:layout_marginTop="60dp"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/log_in_btn"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:text="@string/question2"/>

        <TextView
            android:id="@+id/sign_in_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:text="@string/sign_in"
            android:textColor="@color/light_blue"
            android:textStyle="bold|italic"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>